add getResource endpoint
